# uwsgi-grace-reload

./: .dockerignore  Dockerflie  Makefile  README.md  docker-compose.yml  gunicorn-grace-reload.sh  k6_load_test.js  pyproject.toml
devops/: entrypoint-dev.sh  entrypoint-uwsgi.sh  gunicorn-grace-reload.sh  uwsgi-grace-reload.sh  uwsgi_conf.ini
gunicorn_reload/: manage.py
gunicorn_reload/api/: urls.py  views.py
gunicorn_reload/gunicorn_reload/: asgi.py  settings.py  urls.py  wsgi.py
